app/assets/stylesheets/application.scss
/* UNIVERSAL */
html, body {
  margin: 0;
  padding: 0;
  width: 100%
}

body {
  font-family: Quicksand;
  color: white;
  background-image: url('wcbg.png');
  background-attachment: fixed;
}

/* INDEX */

div.index-wrapper{
  padding-top: 12vh;
  padding-bottom: 8vh;
}

/* NAVBAR */

a.nav-link {
  font-size: 20px !important;
}

img.thumbnail{
  height: 300px;
  width: 300px;
  object-fit: cover;
}


/* Image hover effect */

.imghover img { transition: all .2s ease-in-out; }
.imghover:hover {
  img {
    transform: scale(1.1);
  }
  .overlay {
    height: 20%;
  }
}

.overlay {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  background-color: #0A0D01;
  overflow: hidden;
  width: 87%;
  height: 0;
  transition: .5s ease;
  opacity: 0.8;
}


.overlaytext {
  white-space: nowrap;
  color: white;
  font-size: 15px;
  position: absolute;
  overflow: hidden;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
}

/* image styling */

img {
  padding-top: 1em;
}

/** PICTURE NEW VIEW **/

div.new-picture-wrapper {
  background: rgba(0, 0, 0, 0.7);
}

.container.picture {
  display: flex;
  justify-content: center;
}

.transparent-bg {
  background: rgba(0, 0, 0, 0.7);
  padding: 10vh 10vw;
}

/*** PICTURE SHOW VIEW ***/

// 768px
@media (max-width: 768px) {
  div.map-block{
    padding-top: 3vh;
  }
}


div.map-block#location2{
  padding-top: 3vh;
}

.embed-responsive{
    box-shadow: 0 10px 6px -6px #777;
}

img.main-image {
  margin: 0 auto;
  padding: 0;
  padding-top: 15vh;
}

.img-wrapper {
  position: relative;
}

.img-row {
  display: flex;
  justify-content: center;
}

.caption {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  background: rgba(0, 0, 0, 0.7);
  text-align: center;
}

span.star {
  color: yellow;
}

p.review {
  padding-left: 1vw;
  padding-right: 1vw;
}

div.margin-top {
  margin-top: 1vh;
  margin-bottom: 1vh;
}

.review-block {
  background: rgba(0, 0, 0, 0.7);
  margin-right: 1vw;
  margin-left: 1vw;
  margin-top: 4em;
}

div.about-text{
  width:80%;
  margin: 4em auto;
  text-align: justify;
}

img.top-5{
  object-fit: cover;
}

/* FOOTER */

a.icons-sm {
  position: center;
}

/* About us */
.row about-text {
  margin-top: 10em;
}

img#wyncode{
  padding-bottom: 3vh;
}

